update auto change and change inv for export